--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <ul class="nav navbar-nav">
                     <!-- Hidden li included to remove active class from about link when scrolled up past about section -->
                     <li class="hidden"><a href="#page-top"></a></li>
-                    <li><a class="page-scroll" href="#about">Features</a></li>
+                    <li><a class="page-scroll" href="#about">Featuress</a></li>
                     <li><a class="page-scroll" href="#gallery">Gallery</a></li>
                     <li><a class="page-scroll" href="#specs">Specs</a></li>
                     <!-- <li><a class="page-scroll" href="#download">Download</a></li> -->
